# MHSXtraPy

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  main.py  pyproject.toml
EXAMPLE-Low-Lou/: example-low-lou.ipynb
EXAMPLE-SDO/: example-sdo.ipynb
EXAMPLE-Solar-Orbiter/: example-solar-orbiter.ipynb
EXAMPLE-analytical-BC/: example-analytical-bc.ipynb
EXAMPLE-back-atmo/: example-back-atmo.ipynb
TEST-runtime-performance/: test-runtime-performance.ipynb
mhsxtrapy/: __init__.py  _atmosphere.py  _boundary.py  _constants.py  _extrapolation.py  _field.py  _fourier.py  atmosphere.py  b3d.py  boundary.py  constants.py  examples.py  extrapolation.py  field.py  field2d.py  field3d.py  graphics.py  graphics_balanced.py  nff2ff.py  phibar.py  prep.py  types.py  vis.py
mhsxtrapy/data/: hmi.sharp_cea_720s.377.20110215_000000_TAI.Br.fits
mhsxtrapy/msat/: .gitignore  params.f90
mhsxtrapy/msat/doc/: manual.bib  manual.tex
mhsxtrapy/msat/idlvis/: fieldline3d.pro  model3d.pro  plot_model_cep.pro  read.pro  start.pro  trilinear3d.pro
mhsxtrapy/msat/pro/: getnullsgordon.pro  makefield.pro  map.pro  plotnulls.pro  plotnullstest.pro  plotstruct.pro
mhsxtrapy/msat/pyvis/: fieldline3d.py  graph.py  model3d.py  nullstruct.py  plot_cut.py  read.py
mhsxtrapy/msat/src/: bp.F90  common.F90  hcs.F90  list_mod.f90  make_cut.f90  nf.F90  nf_mod.F90  ring.F90  trace.F90
mhsxtrapy/plotting/: _3d.py  __init__.py  _core.py  _fieldline3d.py  _plot.py  _pp.py  _utils.py  fieldline3d.py  graphics.py  graphics_balanced.py  plot.py  plot_balanced.py  plot_unbalanced.py  utils.py  vis.py
mhsxtrapy/solutions/: __init__.py  _base.py  _low.py  _nadol_neukirch.py  _neukirch_wiegelmann.py  base.py  low.py  nadol_neukirch.py  naneu.py  neukirch_wiegelmann.py  neuwie.py
mhsxtrapybeta/: b3d.py  examples.py  field2d.py  field3d.py  graphics.py  graphics_balanced.py  prep.py  vis.py
notebooks/: example-analytical-bc.ipynb  example-analytical-boundary-condition.ipynb  example-atmosphere.ipynb  example-back-atmo.ipynb  example-from-observations.ipynb  example-low-lou-copy.ipynb  example-low-lou.ipynb  example-sdo.ipynb  example-solar-orbiter.ipynb  paper.ipynb  test-runtime-performance.ipynb
scripts/: paper.py
src/mhsxtrapy/: _boundary.py  _extrapolation.py  _field.py  _fourier.py  constants.py  examples.py
src/mhsxtrapy/plotting/: __init__.py  _fieldline3d.py  _utils.py  plot.py
src/mhsxtrapy/solutions/: _nadol_neukirch.py
tests/: test_benchmarks.py  test_boundary.py  test_fourier.py  test_solutions.py
