[project]
name = "mhsxtrapy"
version = "0.1.0"
description = "Magnetohydrostatic extrapolation of photospheric magnetic field data into the solar corona"
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
authors = [
    { name = "Lilli Nadol", email = "lillinadol@gmail.com" },
]
keywords = [
    "solar physics",
    "magnetohydrostatics",
    "magnetic field extrapolation",
    "solar corona",
    "photosphere",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "astropy>=5.3",
    "bs4>=0.0.2",
    "drms>=0.7.0",
    "h5py>=3.8.0",
    "ipywidgets>=8.0.0",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "mpl-animators>=1.1.0",
    "numba>=0.57.0",
    "numpy>=1.24.0",
    "reproject>=0.10.0",
    "scipy>=1.10.0",
    "sunpy>=5.0.0",
    "zeep>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.11.0",
    "ty>=0.0.23",
]
test = [
    "pytest>=8.0.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
]
typing = [
    "ty>=0.0.23",
]

[tool.setuptools.package-data]
mhsxtrapy = ["py.typed"]

[project.urls]
Homepage = "https://github.com/LMNadol/MHSXtraPy"
Repository = "https://github.com/LMNadol/MHSXtraPy"
Issues = "https://github.com/LMNadol/MHSXtraPy/issues"

[tool.setuptools.packages.find]
include = ["mhsxtrapy*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ty]
python-version = "3.14"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "NPY",       # numpy-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["mhsxtrapy"]
